--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,3 @@
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 0.8rem;
-}
-
-.logo span {
-  font-size: 1.2rem;
-}
-
-logo h1 {
-  font-size: 1.4rem;
-  font-weight: bold;
-  margin: 0;
-  color: #fff;
+.App{
+  background-color: #111f30;;
 }
