--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
-.App{
-  background-color: #111f30;;
+button{
+  outline: none !important;
+  border: none !important;
 }
+.active-button {
+  background-color: #EC8305 !important;
+  border-radius: 8px !important;
+}
+
+
