--- a/src/pages/quiz/components/questions/option.css
+++ b/src/pages/quiz/components/questions/option.css
@@ -1,6 +1,6 @@
 .correct {
-    background-color: green;
+    background-color: #89AC46!important;
   }
   .wrong {
-    background-color: red;
+    background-color: #EC8305!important;
   }
